[feature][#165590087] fix horizontal spacing on InlineNotificationWithHeader

--- a/src/components/inlineNotificationWithHeader/InlineNotificationWithHeader.scss
+++ b/src/components/inlineNotificationWithHeader/InlineNotificationWithHeader.scss
@@ -60,7 +60,7 @@
   }
 
   .content {
-    margin: 18px $space-4 18px $space-2;
+    margin: 18px $space-2 18px $space-2;
     display: flex;
     flex-direction: column;
 
